# boolex

./: CHARS  CMakeLists.txt  TODO  makefile
include/: global.hpp
include/calc/: binary_calc.hpp  binary_operand.hpp
include/lexan/: lexan.hpp
include/matrix_generator/: truth_matrix_generator.hpp
include/shunting_yard/: shunting_yard.hpp
include/util/: bin_operator.hpp  binary_repr.hpp  exceptions.hpp  token.hpp
server/: server.rb
src/calc/: binary_calc.cpp  binary_operand.cpp
src/lexan/: lexan.cpp
src/matrix_generator/: truth_matrix_generator.cpp
src/shunting_yard/: shunting_yard.cpp
src/util/: bin_operator.cpp  exceptions.cpp  token.cpp
test/: boolex_test.cpp  makefile
test/calc/: binary_operand_test.cpp  tests.hpp
test/lexan/: lexan_test.cpp
test/shunting_yard/: shunting_yard_test.cpp
